fix(KwGrid): use quasar class for text-align

--- a/src/components/grid/KwGrid.scss
+++ b/src/components/grid/KwGrid.scss
@@ -54,18 +54,6 @@
 /*
   Renderer
   */
-.rg-align-left .rg-renderer {
-  text-align: left;
-}
-
-.rg-align-center .rg-renderer {
-  text-align: center;
-}
-
-.rg-align-right .rg-renderer {
-  text-align: right;
-}
-
 // .rg-editable {
 //   .rg-renderer {
 //     max-width: 100%;
